# dfkinds

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  MANIFEST.in  README  dfkinds.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_docker.yml  test_docs.yml  test_tox.yml
config/appveyor/: install.ps1
config/dpkg/: changelog  clean  control  copyright  python-dfkinds.install  python3-dfkinds.install  rules
config/travis/: install.sh  run_coverage.sh  run_pylint.sh  runtests.sh
dfkinds/: __init__.py
docs/: conf.py  index.rst
docs/sources/api/: dfkinds.rst  modules.rst
docs/sources/user/: Installation-instructions.md  index.rst
utils/: update_dependencies.py  update_release.sh
