[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfkinds"
version = "20251125"
description = "Digital Forensics kinds (types and classes)"
maintainers = [
    { name = "Log2Timeline maintainers", email = "log2timeline-maintainers@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"

[project.urls]
Documentation = "https://dfkinds.readthedocs.io/en/latest"
Homepage = "https://github.com/log2timeline/dfkinds"
Repository = "https://github.com/log2timeline/dfkinds"

[tool.setuptools.packages.find]
where = ["."]
include = ["dfkinds"]
exclude = ["docs", "tests", "tests.*", "utils"]
